# yc-cli

./: .gitignore  README.md  pyproject.toml
.well-known/skills/default/: skill.md
src/yc_cli/: api.py  cache.py  cli.py  formatter.py  models.py
